@@ -6,5 +6,11 @@
     <input class='button' type="submit" value="Button 1"/>
     <input class='button' type="submit" value="Button 2"/>
     <input class='button' type="submit" value="Button 3"/>
+
+
+    <input class="textfield" size="40" type="text" value="text 1"/>
+    <input class="textfield" size="40" type="text" value="text 2"/>
+    <input class="textfield" size="40" type="text" value="text 3"/>
+
   </body>
 </html>
