@@ -60,6 +60,26 @@ module PageObject
     end
     
     #
+    # Finds all text fields that match the provided identifier
+    #
+    # @param [Hash] identifier how we find a text field.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :css => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :tag_name => Watir and Selenium
+    #   * :text => Watir only
+    #   * :title => Watir and Selenium
+    #   * :value => Watir only
+    #   * :xpath => Watir and Selenium
+    #
+    def text_field_elements(identifier)
+      platform.text_fields_for(identifier.clone)
+    end
+    
+    #
     # Finds a hidden field
     #
     # @param [Hash] identifier how we find a hidden field.  You can use a multiple paramaters
