@@ -1,6 +1,7 @@
 === Version 0.5.6
 * Enhancements
-  * Added #button_elements to find all buttons on a page that match locators
+  * Added #button_elements to ElementLocators
+  * Added #text_field_elements to ElementLocators
   * Added #navigate_to method to PageFactory to navigate to a page through previous pages
   * Added #continue_navigation_to method to PageFactory which begins at @current_page
   * Added routes to PageFactory to collect routes through the site
